<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/gradient_background">

    <!-- Forget Password Heading -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/Forget_password"
        android:textColor="#000000"
        android:textSize="24sp"
        android:layout_marginTop="40dp"/> <!-- Margin added to push it down from the top -->

    <!-- Email Input Field -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="true"
        android:hint="Enter your email"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:background="@drawable/rounded_input_background"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        android:padding="12dp"
        android:layout_marginTop="20dp"
    tools:ignore="HardcodedText" />

    <!-- Reset Password Button -->
    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_verification_code"
        android:textColor="#FFFFFF"
        android:backgroundTint="#3F51B5"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button_background"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login_page"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@android:color/transparent" />



    <TextView
        android:id="@+id/responseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/black"
        android:visibility="gone"
    android:layout_marginTop="16dp"
    android:layout_gravity="center" />


</LinearLayout>
